--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 h1{
     font-size: 40px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 h3{
     margin-bottom: 30px;
@@ -46,4 +46,42 @@ section{
     font-weight: 700;
     padding: 10px 40px;
     border-radius: 10px;
+}
+.dream-img{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.sor{
+    padding-left: 40px;
+}
+.experience{
+    box-shadow:  10px 10px 40px grey;
+    width: 50%;
+    padding-left: 2%;
+    padding-right: 2%;
+    margin: 40px;
+    border-radius: 10px;
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+.experience-1{
+    box-shadow:  10px 10px 40px grey;
+    width: 50%; 
+    padding-left: 2%;
+    padding-right: 2%;
+    margin: 40px;
+    border-radius: 10px;
+    border-left: 7px solid;
+    border-image: linear-gradient(purple, tomato);
+    border-image-slice: 1;
+}
+.exp-back{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+
+}
+.last-postion{
+    text-align: center;
 }
